# gentzcc

./: Cargo.toml  README.md  rustfmt.toml
gcpproc/: Cargo.toml
gcpproc/src/: a.rs  common.rs  main.rs  p1to3.rs  preproc.lalrpop
gcpproc/src/p1to3/: tests.rs
