[package]
name = "gcpproc"
version = "0.1.0"
authors = ["Hal Gentz <zegentzy@protonmail.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
lalrpop-util = "0.17"
regex = "0.2"
logos = "0.10.0-rc2"
log = "0.4"
env_logger = "0.7"
lazy_static = "1.4"
#takeable-option = "0.5"

[build-dependencies]
lalrpop = "0.17"
